--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title:       Neil Loknath
-subtitle:    Software Developer
+subtitle:    Always thinking. Thoughts occassionally spill out here.
 email:       hello@nloko.ca
 author:      Neil Loknath
-description: "Thoughts from a Software Developer who builds things that follow you where ever you go."
+description: "Writings about nothing specific. I tend to focus on software."
 baseurl:     ""
 url:         "http://blog.nloko.ca/"
 date_format: "%b %-d, %Y"
